making nb container relative so sidebar can be cleanly positioned

--- a/js/src/css/juno.css
+++ b/js/src/css/juno.css
@@ -8,10 +8,11 @@
 
 #notebook-container {
   padding-left: 80px;
+  position: relative;
 }
 
 .juno-sidebar {
   position: absolute;
-  left: 45px;
-  top: 35px;
+  left: 0px;
+  top: 0px;
 }
